--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -7,7 +7,7 @@
 <!-- зона заголовка html, тег <title> - строка, которую браузер отображает на вкладках над страницами, <meta> и <link> сообщают технические сведения для браузера, например, что файл имеет кодировку Юникод (utf-8) -->
 
 	<head>
-		<title>Личная страница Веры Кузнецовой</title>
+		<title>Личная страница Кирилла Ежов</title>
 	 	<!-- Required meta tags -->
 	 	<meta charset="utf-8">
 	 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,8 +34,8 @@
 				</div> 
 				<nav class="collapse navbar-collapse" id="bs-navbar"> 
 					<ul class="nav navbar-nav navbar-right"> 
-						<li> <a href="https://lingvocodes.github.io/HSEinfo/ba-ling-2021/index.html">Страница курса</a> </li> 
-						<li> <a href="https://lingvocodes.github.io/HSEinfo/ba-ling-2021/latin_2.html">Страница группы</a> </li> 
+						<li> <a href="https://www.hse.ru/ba/ling/courses/1048893874.html">Страница курса</a> </li> 
+						<li> <a href="https://olesar.github.io/lingdata/">Страница курса (контент)</a> </li> 
 <!-- поправьте номер группы в URL, если нужно (от 1 до 4) -->
 					</ul>
 				</nav> 
@@ -44,20 +44,20 @@
 
 <!-- начинается шапка. у тега header есть атрибут style, который задает цвет фона и отступы. поменяйте значения атрибутов и посмотрите, как изменится страница -->
 
-		<header style="background-color:plum; padding-top:70px; "> 
+		<header style="background-color:#555555; padding-top:70px; "> 
 			<div class="container"> 
 				<div class="row">
 					<div class="col-md-4">
 						<br><br>
 <!-- здесь и дальше нужно поменять весь содержательный текст, чтобы получилась ваша личная страница -->
-						<h1>Оля Ляшевская</h1>
+						<h1 style="color:white; text-shadow: 0px 0px 2px white;">Кирилл Е. 🤟🤟🤟</h1>
 						<hr> <!-- это горизонтальная линия -->
-						<p><i>Человек, умеющий <b>создавать</i> HTML</b></p> 
+						<p style="color:white; text-shadow: 0px 0px 2px white;">вы когда-нибудь слышали об анекдоте про <b><i><a style="color:white; text-shadow: 0px 0px 2px white;" href="https://docs.google.com/document/d/1UpEImPprXVmarMlM981JxC7sagtilLBd__cMBkIx-U0/edit?usp=sharing">парты?</a></i></b></p> 
 					</div>
 					<div class="col-md-4">
 <!-- img - тег для вставки изображений. Мы использовали атрибут style, чтобы задать размер изображения и ширину рамки-->
 <!-- Измените URL на URL вашей фотографии, а также настройте размер изображения -->
-<img src="myphoto.jpg" style="height:320px; margin:20px 20px 40px 20px; " >
+<img src="myphoto.jpg" title="с каждым днём я всё больше чувствую себя старым гномом: хочется уйти в лес, начать искать золото, а ещё спина болит... и голова..." style="height:320px; margin:20px 20px 40px 20px; " >
 					</div>
 				</div>
 			</div>
@@ -77,37 +77,35 @@
 					</article>
 					<article>
 						<h3>Родной город</h3>
-						<p>Москва</p>
+						<p>Ногинск <span style="color:#999999;">(это который рядом с Фрязевом)</span> </p>
 					</article>
 					<article>
 						<h3>Школа</h3>
-<!-- когда будете менять текст, не используйте бюрократических слов типа ГБОУ СОШ, ну пожаалуйста -->
-						<p>СУНЦ НГУ</p>
+						<p><a style="color:#333333;" href="https://letovo.ru">Шкетово</a></p>
 					</article>
 				</div>
 
 				<div class="col-md-6">
 					<article>
-						<h3>Тут можно написать</h3>
-						<p>Еще много много много много много много <br>
-						много <br>
-						много <br>
-						много <br>
-						много <br>
-						много <br>
-						много <br>
-						много <br>
-						всего о себе</p>
+						<h3>Забавные <i>(нет)</i> факты</h3>
+						<li>Город Ногинск является антиподом города Рукинск. </li>
+						<li>Я зачем-то учу <span title="русский жестовый язык" style="color:#333333;">РЖЯ</span></li>
+						<li>Раньше я занимался МХК. Но бросил... <span style="color:white;">И слава богу.</span></li>
+						<li>На ЕГЭ по английскому я использовал слово <a style="color:#333333; font-style: italic;" href="https://dictionary.cambridge.org/dictionary/english/supercalifragilisticexpialidocious">supercalifragilisticexpialidocious</a></li>
+						<li>Некоторые люди очень хотят назвать меня Егором</li>
+						<li>Я неплохо разбираюсь в теориях заговора. Особенно в правдивых</li>
+						<li title="в словах типа 'позҗе' и 'приезҗать', но не в 'можжевельник' и 'жжёт'">Я устойчиво произношу [ж':] в ряде слов</li>
 					</article>
 				</div>
 
 				<div class="col-md-3">
-					<h3>Я в соцсетях</h3>
+					<h3>Контакты</h3>
 <!-- тег <ul> - unordered list. Еще бывает тег <ol> -->
 					<ul>
-						<li>VK</li>
-						<li>Discord</li>
-						<li>Telegram</li>
+						<li><a style="color:#333333;" href="https://t.me/k1r_je">Telegram</a></li>
+						<li><a style="color:#333333;" href="mailto:kialezhov@edu.hse.ru?body=спасите">Почта</a></li>
+						
+						<p>цифры знаешь - наберёшь.</p>
 					</ul>
 				</div>
 			</div>
@@ -116,7 +114,7 @@
 <!-- это подвал. В этой части страницы обычно ставят копирайт (с помощью символа &copy;) и пишут об истории создания страницы. Поставьте свой копирайт -->
 		<footer class="bs-docs-footer"> 
 			<div class="container"> 
-				<p style="text-align:right; ">&copy; В. Кузнецова, 2024</p> 
+				<p style="text-align:right; ">&copy; К. Ежов, 2025</p> 
 			</div>
 		</footer>
 	</body>
