--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -93,7 +93,7 @@
 						<li>Раньше я занимался МХК. Но бросил... <span style="color:white;">И слава богу.</span></li>
 						<li>На ЕГЭ по английскому я использовал слово <a style="color:#333333; font-style: italic;" href="https://dictionary.cambridge.org/dictionary/english/supercalifragilisticexpialidocious">supercalifragilisticexpialidocious</a></li>
 						<li>Некоторые люди очень хотят назвать меня Егором</li>
-						<li>Я неплохо разбираюсь в теориях заговора. Особенно в правдивых</li>
+						<li>Я неплохо разбираюсь в теориях заговора. Особенно в <span title="Я ПРОИГРАЛ!">правдивых</span></li>
 						<li title="в словах типа 'позҗе' и 'приезҗать', но не в 'можжевельник' и 'жжёт'">Я устойчиво произношу [ж':] в ряде слов</li>
 					</article>
 				</div>
@@ -120,3 +120,4 @@
 	</body>
 
 </html>
+
